--- a/COMP123-S2016-ASSIGNMENT7/Properties/Resources.resx
+++ b/COMP123-S2016-ASSIGNMENT7/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="cedarrapids" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cedarrapids.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Movie Bonanza" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Movie Bonanza.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
